[package]
name = "titan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["./engine"]

[dependencies]
# crate.io dependencies
egui = "0.18.1"
egui_winit_vulkano = "0.17.0"
winit = "0.26.1"

# local dependencies
engine = { path = "./engine" }
